<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/rounded_bg"
    android:padding="15dp">

    <TextView
        android:id="@+id/txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_this_note"
        android:textColor="#1c1721"
        android:textSize="17sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/txt"
        android:layout_alignRight="@+id/txt"
        android:layout_below="@+id/txt"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:padding="8dp"
            android:text="@string/ok"
            android:textColor="@color/colorDeleteActions"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtCANCEL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/cancel"
            android:textColor="@color/colorDeleteActions"
            android:textSize="14sp"
            android:textStyle="bold" />


    </LinearLayout>

</RelativeLayout>

