<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_bg"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/add_a_new_note"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight=".1"
            android:background="@android:color/transparent"
            android:padding="5dp"
            android:rotation="45"
            android:src="@drawable/ic_add_white_24dp"
            android:contentDescription="@string/delete_button" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll1">


        <LinearLayout
            android:id="@+id/ll11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text_style_grey"
                android:orientation="vertical"
                android:padding="5dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/edit_text_style_transparent"
                        android:hint="@string/title"
                        android:maxLines="1"
                        android:minLines="1"
                        android:padding="5dp"
                        android:textColor="@android:color/black"
                        android:textCursorDrawable="@null" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/description_layout_height"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_style_grey"
                android:orientation="vertical"
                android:padding="5dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/edit_text_style_transparent"
                        android:hint="@string/description"
                        android:inputType="textMultiLine"
                        android:maxLines="10"
                        android:minLines="1"
                        android:padding="5dp"
                        android:textColor="@android:color/black"
                        android:textCursorDrawable="@null" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>


        </LinearLayout>


    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scroll"
        android:layout_margin="15dp"
        android:background="@color/colorPrimary">

        <Button
            android:id="@+id/btnDone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:text="@string/done"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>