<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hbworld.com.notes.ui.NotesDetailActivity">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ToolBarStyle"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/llbtn"
        android:layout_below="@+id/toolbar"
        android:scrollbars="none">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="15dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edit_text_style_grey"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/etTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginEnd="20dp"
                            android:background="@drawable/edit_text_style_transparent"
                            android:enabled="false"
                            android:hint="@string/title"
                            android:minLines="1"
                            android:padding="5dp"
                            android:textColor="@android:color/black"
                            android:textCursorDrawable="@null" />

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_text_style_grey"
                    android:minHeight="80dp"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/etDescription"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginEnd="20dp"
                            android:background="@drawable/edit_text_style_transparent"
                            android:enabled="false"
                            android:hint="@string/description"
                            android:inputType="textMultiLine"
                            android:minLines="1"
                            android:padding="5dp"
                            android:textColor="@android:color/black"
                            android:textCursorDrawable="@null" />

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>


            </LinearLayout>


        </android.support.v7.widget.CardView>

    </ScrollView>

    <LinearLayout
        android:id="@+id/llbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_alignParentBottom="true">

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="5dp"
        android:text="@string/edit_note"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:textColor="@android:color/white" />

    </LinearLayout>


</RelativeLayout>
